# touchdeck

./: .deepsource.toml  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  context7.json  pyproject.toml
.github/workflows/: scorecard.yml
docs/: LICENSE  README.md  configuration.mdx  development.mdx  docs.json  index.mdx  quick-actions.mdx  quickstart.mdx  themes.mdx  troubleshooting.mdx  ui-pages.mdx
tests/: test_settings.py  test_stats.py  test_themes.py  test_utils.py
touchdeck/: LRCLIB.py  animations.py  constants.py  main.py  media.py  quick_actions.py  settings.py  themes.py  utils.py
touchdeck/services/: mpris.py  notifications.py  speedtest.py  spotify_provider.py  stats.py
touchdeck/ui/: dialogs.py  pages.py  widgets.py  window.py
touchdeck/ui/pages/: __init__.py  clock.py  developer.py  emoji.py  music.py  settings.py  speedtest.py  stats.py
