[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "touchdeck"
version = "0.1.0"
description = "A Stream Deck-like touchscreen UI with Now Playing (MPRIS) + system stats."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Code" }]
dependencies = [
  "PySide6>=6.5",
  "qasync>=0.27",
  "dbus-next>=0.2.3",
  "psutil>=5.9",
  "speedtest-cli>=2.1.3",
  "httpx>=0.28.1",
  "spotipy>=2.25.2",
  "pynvml>=13.0.1",
]

[project.optional-dependencies]
nvidia = ["nvidia-ml-py>=12.0.0"]
dev = [
  "pytest>=8.3",
  "pytest-cov>=4.0"
]

[project.scripts]
touchdeck = "touchdeck.main:main"

[tool.hatch.build.targets.wheel]
packages = ["touchdeck"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]
