[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "touchdeck"
version = "0.1.0"
description = "A Stream Deck-like touchscreen UI with Now Playing (MPRIS) + system stats."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Code" }]
dependencies = [
  "PySide6>=6.5",
  "qasync>=0.27",
  "dbus-next>=0.2.3",
  "psutil>=5.9",
  "speedtest-cli>=2.1.3",
  "spotipy>=2.25.2",
  "nvidia-ml-py>=12.0.0"
]

[dependency-groups]
dev = [
  "pip-audit>=2.10.0",
  "pre-commit>=4.5.1",
  "pytest>=9.0.2",
  "pytest-cov>=7.0.0",
  "ruff>=0.14.10",
  "ty>=0.0.6",
  "deptry>=0.24.0",
]

[project.scripts]
touchdeck = "touchdeck.main:main"

[tool.hatch.build.targets.wheel]
packages = ["touchdeck"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.deptry.per_rule_ignores]
DEP002 = ["pip-audit", "pre-commit", "pytest", "pytest-cov", "ruff", "ty", "deptry"]
